--- a/src/app/components/user/user.component.html
+++ b/src/app/components/user/user.component.html
@@ -1,29 +1,50 @@
-<div class="container mt-6">
-  <h2>Table</h2>   
-  <table class="table table-striped">
-    <thead>
-      <tr>
-        <th>Firstname</th>
-        <th>Lastname</th>
-        <th>Email</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <td>John</td>
-        <td>Doe</td>
-        <td>john@example.com</td>
-      </tr>
-      <tr>
-        <td>Mary</td>
-        <td>Moe</td>
-        <td>mary@example.com</td>
-      </tr>
-      <tr>
-        <td>July</td>
-        <td>Dooley</td>
-        <td>july@example.com</td>
-      </tr>
-    </tbody>
-  </table>
-</div>
+<section class="intro">
+  <div class="mask d-flex align-items-center h-100">
+    <div class="container">
+      <div class="row justify-content-center">
+        <div class="col-12">
+          <div class="card shadow-2-strong">
+            <div class="card-body p-0">
+              <div
+                class="table-responsive table-scroll"
+                data-mdb-perfect-scrollbar="true"
+              >
+                <table class="table table-dark mb-0">
+                  <thead style="background-color: #3d3535">
+                    <tr class="text-uppercase text-light font-weight-bold">
+                      <th scope="col">#SN</th>
+                      <th scope="col">NAME</th>
+                      <th scope="col">EMAIL</th>
+                      <th scope="col">Action</th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <tr
+                      class="text-uppercase text-light"
+                      *ngFor="let user of users.users"
+                    >
+                      <td>{{ user.id }}</td>
+                      <td>{{ user.name }}</td>
+                      <td>{{ user.email }}</td>
+                      <td>
+                        <button type="button" class="btn btn-dark btn-floating">
+                          <i class="fa fa-edit"></i>
+                        </button>
+                        <button
+                          type="button"
+                          class="btn btn-danger btn-floating btn-rounded"
+                        >
+                          <i class="fa fa-trash"></i>
+                        </button>
+                      </td>
+                    </tr>
+                  </tbody>
+                </table>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
