--- a/src/app/components/user/user.component.html
+++ b/src/app/components/user/user.component.html
@@ -1,46 +1,53 @@
+
 <section class="intro">
-  <div class="mask d-flex align-items-center h-100">
-    <div class="container">
-      <div class="row justify-content-center">
-        <div class="col-12">
-          <div class="card shadow-2-strong">
-            <div class="card-body p-0">
-              <div
-                class="table-responsive table-scroll"
-                data-mdb-perfect-scrollbar="true"
-              >
-                <table class="table table-dark mb-0">
-                  <thead style="background-color: #3d3535">
-                    <tr class="text-uppercase text-light font-weight-bold">
-                      <th scope="col">#SN</th>
-                      <th scope="col">NAME</th>
-                      <th scope="col">EMAIL</th>
-                      <th scope="col">Action</th>
-                    </tr>
-                  </thead>
-                  <tbody>
-                    <tr
-                      class="text-uppercase text-light"
-                      *ngFor="let user of users.users"
-                    >
-                      <td>{{ user.id }}</td>
-                      <td>{{ user.name }}</td>
-                      <td>{{ user.email }}</td>
-                      <td>
-                        <button type="button" class="btn btn-dark btn-floating">
-                          <i class="fa fa-edit"></i>
-                        </button>
-                        <button
-                          type="button"
-                          class="btn btn-danger btn-floating btn-rounded"
-                        >
-                          <i class="fa fa-trash"></i>
-                        </button>
-                      </td>
-                    </tr>
-                  </tbody>
-                </table>
-              </div>
+  <div class="container">
+    <div class="row justify-content-center">
+      <div class="col justify-content-end">
+        <button class="btn btn-primary mx-auto float-md-right  text-center btn-floating btn-rounded" (click)="openModal()">
+          <i class="fa fa-plus "></i>
+        </button>
+      </div>
+      <div class="col-12">
+        <div class="card shadow-2-strong">
+          <div class="card-body p-0">
+            <div
+              class="table-responsive table-scroll"
+              data-mdb-perfect-scrollbar="true"
+            >
+              <table class="table table-dark mb-0">
+                <thead>
+                  <tr class="text-uppercase text-light font-weight-bold">
+                    <th scope="col">#SN</th>
+                    <th scope="col">NAME</th>
+                    <th scope="col">EMAIL</th>
+                    <th scope="col">Action</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr
+                    class="text-uppercase text-light"
+                    *ngFor="let user of users.users"
+                  >
+                    <td>{{ user.id }}</td>
+                    <td>{{ user.name }}</td>
+                    <td>{{ user.email }}</td>
+                    <td>
+                      <button
+                        type="button"
+                        class="btn btn-primary btn-floating btn-rounded text-center"
+                      >
+                        <i class="fa fa-edit"></i>
+                      </button>
+                      <button
+                        type="button"
+                        class="btn btn-danger text-center btn-floating btn-rounded"
+                      >
+                        <i class="fa fa-trash"></i>
+                      </button>
+                    </td>
+                  </tr>
+                </tbody>
+              </table>
             </div>
           </div>
         </div>
