--- a/src/app/components/user/user.component.html
+++ b/src/app/components/user/user.component.html
@@ -1,22 +1,24 @@
-
 <section class="intro">
   <div class="container">
     <div class="row justify-content-center">
       <div class="col justify-content-end">
-        <button class="btn btn-primary mx-auto float-md-right  text-center btn-floating btn-rounded" (click)="openModal()">
-          <i class="fa fa-plus "></i>
+        <button
+          class="btn btn-primary mx-auto float-md-right text-center "
+          (click)="openModal()"
+        >
+          <i class="fa fa-plus"></i> Add User
         </button>
       </div>
-      <div class="col-12">
+      <div class="col-md-12">
         <div class="card shadow-2-strong">
           <div class="card-body p-0">
             <div
               class="table-responsive table-scroll"
               data-mdb-perfect-scrollbar="true"
             >
-              <table class="table table-dark mb-0">
+              <table class="table table-striped">
                 <thead>
-                  <tr class="text-uppercase text-light font-weight-bold">
+                  <tr class="text-uppercase bg-dark text-light">
                     <th scope="col">#SN</th>
                     <th scope="col">NAME</th>
                     <th scope="col">EMAIL</th>
@@ -34,15 +36,15 @@
                     <td>
                       <button
                         type="button"
-                        class="btn btn-primary btn-floating btn-rounded text-center"
+                        class="btn btn-light btn-floating btn-rounded text-center"
                       >
                         <i class="fa fa-edit"></i>
                       </button>
                       <button
                         type="button"
-                        class="btn btn-danger text-center btn-floating btn-rounded"
+                        class="btn btn-light text-center btn-floating btn-rounded"
                       >
-                        <i class="fa fa-trash"></i>
+                        <i class="fa fa-trash "></i>
                       </button>
                     </td>
                   </tr>
