--- a/src/app/components/user/user.component.scss
+++ b/src/app/components/user/user.component.scss
@@ -6,22 +6,33 @@ body,
   background-color: #ffffff;
 }
 
-table td,
-table th {
+table td {
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
+  color: black
 }
 
 .card {
-  border-radius: 10.5rem !important;
+  // border-radius: 0.5rem;
+  box-shadow: 0 10.5rem 11rem rgba(0, 0, 0, 0.692);
+  overflow: hidden;
+  background-color: white;
 }
 
 .table-scroll {
-  border-radius: 0.5rem;
+  overflow-x: auto;
+  -ms-overflow-style: -ms-autohiding-scrollbar;
 }
+
 
 thead {
   top: 0;
   position: sticky;
+}
+
+
+.btn:hover{
+  transform: scale(1.3);
+  transition: all .2s ease-in-out;
 }
