--- a/src/app/components/user/user.component.html
+++ b/src/app/components/user/user.component.html
@@ -1,24 +1,48 @@
-<section class="intro">
+
+<div class="container mt-5">
+  <h3>User Registration</h3>
+  <div class="main d-flex justify-content-center aligh-item-center">
+    <div *ngIf="error">
+      <p>Error: {{ error }}</p>
+    </div>
+  
+    <form class="form-group" [formGroup]="userForm" (ngSubmit)="addUser()">
+      <input
+        class="form-control"
+        type="text"
+        name="name"
+        placeholder="Enter name"
+        formControlName="name"
+      />
+      <br />
+      <input
+        class="form-control"
+        type="text"
+        name="email"
+        placeholder="Enter email"
+        formControlName="email"
+      />
+      <br />
+      <button class="submit-button" [disabled]="userForm.invalid">SUBMIT</button>
+    </form>
+  </div>
+</div>
+
+
+<main class="intro">
   <div class="container">
     <div class="row justify-content-center">
-      <div class="col justify-content-end">
-        <button
-          class="btn btn-primary mx-auto float-md-right text-center "
-          (click)="openModal()"
-        >
-          <i class="fa fa-plus"></i> Add User
-        </button>
-      </div>
-      <div class="col-md-12">
+      <div class="col-12">
         <div class="card shadow-2-strong">
           <div class="card-body p-0">
+            <!-- Button trigger modal -->
             <div
               class="table-responsive table-scroll"
               data-mdb-perfect-scrollbar="true"
             >
-              <table class="table table-striped">
-                <thead>
-                  <tr class="text-uppercase bg-dark text-light">
+              <table class="table table-light mb-0">
+                <thead style="background-color: #3d3535">
+                  <tr class="text-uppercase text-dark font-weight-bold">
                     <th scope="col">#SN</th>
                     <th scope="col">NAME</th>
                     <th scope="col">EMAIL</th>
@@ -36,15 +60,15 @@
                     <td>
                       <button
                         type="button"
-                        class="btn btn-light btn-floating btn-rounded text-center"
+                        class="btn btn-primary btn-floating"
                       >
                         <i class="fa fa-edit"></i>
                       </button>
                       <button
                         type="button"
-                        class="btn btn-light text-center btn-floating btn-rounded"
+                        class="btn btn-danger btn-floating btn-rounded"
                       >
-                        <i class="fa fa-trash "></i>
+                        <i class="fa fa-trash"></i>
                       </button>
                     </td>
                   </tr>
@@ -56,4 +80,4 @@
       </div>
     </div>
   </div>
-</section>
+</main>
