--- a/src/app/components/user/user.component.html
+++ b/src/app/components/user/user.component.html
@@ -123,10 +123,10 @@
 </div>
 
 <main class="intro">
-  <div class="container">
+  <div class="container-fluid">
     <div class="row justify-content-center">
-      <div class="col-12">
-        <div class="card shadow-5-strong border">
+      <div class="col-lg-6">
+        <div class="card shadow-6-strong border">
           <div class="card-body p-0">
             <!-- Add Message -->
             <div
@@ -241,3 +241,5 @@
     </div>
   </div>
 </main>
+
+
