--- a/src/app/components/user/user.component.scss
+++ b/src/app/components/user/user.component.scss
@@ -1,8 +1,9 @@
 html,
 body,
 .intro {
+  width: 100% !important;
   height: 100%;
-  margin-top: 5rem !important;
+  margin-top: 2rem !important;
   background-color: #ffffff;
 }
 
