--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,6 @@
 @import "mdb-angular-ui-kit/assets/scss/mdb.scss";
+
+.angular-editor-toolbar button i {
+  font-family: FontAwesome !important;
+  color: #474d6d !important;
+}
