--- a/src/app/components/user/user.component.html
+++ b/src/app/components/user/user.component.html
@@ -196,7 +196,7 @@
               <table class="table table-light mb-0 table-striped">
                 <thead>
                   <tr
-                    class="text-uppercase text-dark font-weight-bold transtion"
+                    class="text-lowercase text-dark font-weight-bold transtion"
                   >
                     <th scope="col">#SN</th>
                     <th scope="col">NAME</th>
@@ -209,7 +209,7 @@
                     <td colspan="4" class="text-center">No data found . . .</td>
                   </tr>
                   <tr
-                    class="text-uppercase text-light transtion"
+                    class="text-lowercase text-light transtion"
                     *ngFor="let user of users.users; let i = index"
                   >
                     <td>{{ i + 1 }}</td>
@@ -241,5 +241,3 @@
     </div>
   </div>
 </main>
-
-
