--- a/src/app/components/post/post.component.scss
+++ b/src/app/components/post/post.component.scss
@@ -1,19 +1,17 @@
-.form-check-input {
+.messages {
   position: absolute;
-  margin-top: 0.3rem;
-  margin-left: -1.25rem;
+  top: 5rem;
+  right: 0;
+  z-index: 1;
+  animation: slide-in-top 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
 }
 
-.form-check-label {
-  padding-left: 0.25rem;
-  margin-bottom: 0;
-}
-
-.form-control {
-  color: #495057;
-  background-color: #fff;
-  background-clip: padding-box;
-  border: 1px solid #ced4da;
-  border-radius: 0.25rem;
-  transition: border-color 5.15s ease-in-out, box-shadow 0.15s ease-in-out;
+@keyframes slide-in-top {
+  0% {
+    transform: translateY(-100%);
+    visibility: visible;
+  }
+  100% {
+    transform: translateY(0);
+  }
 }
